View Issue Details

IDProjectCategoryView StatusLast Update
0026004Open CASCADEOCCT:Visualizationpublic2015-05-14 15:31
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026004: Visualization - fix misprint in OpenGl_ShaderManager::prepareStdProgramPhong()
Description"vec4 getVertColor(void)" is defined within wrong variable leading to shader compilation error.
Steps To ReproduceN/A
TagsNo tags attached.
Test case number

Relationships

child of 0025474 closedbugmaster Visualization, TKOpenGl - support lighting + colored vertices within built-in GLSL programs 

Activities

git

2015-04-01 18:21

administrator   ~0039118

Branch CR26004 has been created by kgv.

SHA-1: cdddfe211a98feb0daf92d36f2144d75bff73da8


Detailed log of new commits:

Author: kgv
Date: Wed Apr 1 18:20:56 2015 +0300

    0026004: Visualization - fix misprint in OpenGl_ShaderManager::prepareStdProgramPhong()

git

2015-04-09 09:49

administrator   ~0039456

Branch CR26004 has been deleted by kgv.

SHA-1: cdddfe211a98feb0daf92d36f2144d75bff73da8

Related Changesets

occt: master 7e859dff

2015-04-01 15:20:56

kgv


Committer: bugmaster Details Diff
0026004: Visualization - fix misprint in OpenGl_ShaderManager::prepareStdProgramPhong() Affected Issues
0026004
mod - src/OpenGl/OpenGl_ShaderManager.cxx Diff File

Issue History

Date Modified Username Field Change
2015-04-01 18:18 kgv New Issue
2015-04-01 18:18 kgv Assigned To => kgv
2015-04-01 18:21 git Note Added: 0039118
2015-04-01 18:21 kgv Severity minor => trivial
2015-04-01 18:21 kgv Summary Visualization, TKOpenGl - fix misprint in Phong fragment shader => Visualization - fix misprint in OpenGl_ShaderManager::prepareStdProgramPhong()
2015-04-01 18:23 kgv Relationship added child of 0025474
2015-04-02 19:09 kgv Assigned To kgv => bugmaster
2015-04-02 19:09 kgv Status new => resolved
2015-04-02 19:09 kgv Status resolved => reviewed
2015-04-03 14:47 mkv Assigned To bugmaster => mkv
2015-04-07 16:08 bugmaster Changeset attached => occt master 7e859dff
2015-04-07 16:08 bugmaster Assigned To mkv => bugmaster
2015-04-07 16:08 bugmaster Status reviewed => verified
2015-04-07 16:08 bugmaster Resolution open => fixed
2015-04-09 09:49 git Note Added: 0039456
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0