0026004: Visualization - fix misprint in OpenGl_ShaderManager::prepareStdProgramPhong()